--- a/.env
+++ b/.env
@@ -26,8 +26,8 @@ REDIS_PORT=6379
 MAIL_DRIVER=smtp
 MAIL_HOST=smtp.gmail.com
 MAIL_PORT=587
-MAIL_USERNAME=roger.jvs.08@gmail.com
-MAIL_PASSWORD=AliansaLima1-2
+MAIL_USERNAME=
+MAIL_PASSWORD=
 MAIL_ENCRYPTION=tls
 
 AWS_ACCESS_KEY_ID=
